<resources>
    <string name="app_name">Simple App</string>

    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="phone">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="id">Student ID</string>
    <string name="email">E-mail</string>
    <string name="school">School</string>
</resources>
